--- a/index.html
+++ b/index.html
@@ -9,7 +9,34 @@
     href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 </head>
 <body>
-    
+    <!--Navbar-->
+    <header>
+        <a href="#" class="logo">
+           <img src="img/logo.png" alt="">
+        </a>
+
+        <!--Menu Icon-->
+        <i class='bx bx-menu' id="menu-icon" ></i> 
+
+        <!--Links-->
+        <ul class="navbar">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#aboutus">About Us</a></li>
+            <li><a href="#products">Products</a></li>
+            <li><a href="#customers">Customers</a></li>
+        </ul>
+
+        <!--Icons-->
+        <div class="header-icon">
+            <i class='bx bx-cart-alt'  ></i> 
+            <i class='bx bx-search-alt-2' id="search-icon" ></i> 
+        </div>
+
+        <!--Search Box-->
+        <div class="search-box">
+            <input type="search" placeholder="Search Here.............">
+        </div>
+    </header>
 
 
 
