--- a/index.html
+++ b/index.html
@@ -37,6 +37,20 @@
             <input type="search" placeholder="Search Here.............">
         </div>
     </header>
+    <!--Home-->
+    <section class="home" id="home">
+        <div class="home-text">
+            <h1>Start Your Day<br>with Coffee</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint itaque magni neque eligendi exercitationem in, assumenda, quibusdam aliquid incidunt animi possimus suscipit modi rerum facere eos tempora. Neque, quas eum.</p>
+            <a href="#" class="btn">Shop Now</a>
+        </div>
+        <div class="home-img">
+            <img src="img/main.png" alt="">
+        </div>
+    </section>
+        
+    
+
 
 
 
