--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!--Links-->
         <ul class="navbar">
             <li><a href="#home">Home</a></li>
-            <li><a href="#aboutus">About Us</a></li>
+            <li><a href="#about">About Us</a></li>
             <li><a href="#products">Products</a></li>
             <li><a href="#customers">Customers</a></li>
         </ul>
@@ -48,10 +48,82 @@
             <img src="img/main.png" alt="">
         </div>
     </section>
-        
-    
+    <!--About-->
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="img/about.jpg" alt="">
+        </div> 
+        <div class="about-text">
+            <h2>Our History</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem beatae dolorem veniam enim, minus vitae impedit accusantium exercitationem fuga. Sapiente a explicabo, dicta deserunt minus doloremque iure optio libero consequatur!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, repellendus laboriosam. Ad sint nihil perspiciatis ducimus dignissimos, soluta, laudantium, tempore aliquid tempora maxime tenetur rerum neque delectus iure. Explicabo, enim?</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur blanditiis earum rerum culpa numquam veritatis fugit, ad modi ratione eligendi non, quaerat sit? Nisi, cum minus! Ipsam commodi voluptatibus nulla!</p>
+            <a href="#" class="btn">Learn More</a>
+        </div>
+    </section>
+    <!--Products-->
+    <section class="products" id="products">
+        <div class="heading">
+            <h2>Our Popular Products</h2>
+        </div>
+        <!--Container-->
 
+        <div class="product-container">
+            <div class="box">
+                <img src="img/p1.png" alt="">
+                <h3>ARABICA COFFEE BEANS</h3>
+                <div class="content">
+                    <span>Rs.7500/=</span>
+                    <a href="#">Add To Cart</a>
+                </div>
+            </div>
 
+            <div class="box">
+                <img src="img/p2.png" alt="">
+                <h3>Cafe BOTERO</h3>
+                <div class="content">
+                    <span>Rs.7880/=</span>
+                    <a href="#">Add To Cart</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="img/p3.png" alt="">
+                <h3>Patch Roast</h3>
+                <div class="content">
+                    <span>Rs.8500/=</span>
+                    <a href="#">Add To Cart</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="img/p4.png" alt="">
+                <h3>Dark Roast</h3>
+                <div class="content">
+                    <span>Rs.6200/=</span>
+                    <a href="#">Add To Cart</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="img/p5.png" alt="">
+                <h3>SACRED Grounds</h3>
+                <div class="content">
+                    <span>Rs.3900/=</span>
+                    <a href="#">Add To Cart</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="img/p6.png" alt="">
+                <h3>SMOOTH ITALIAN</h3>
+                <div class="content">
+                    <span>Rs.9990/=</span>
+                    <a href="#">Add To Cart</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <script src="script.js"></script>
