--- a/index.html
+++ b/index.html
@@ -124,6 +124,16 @@
             </div>
         </div>
     </section>
+    <!--Customers-->
+    <section class="customers" id="customers">
+        <div class="heading">
+            <h2>Our Customer's</h2>
+        </div>
+        <!--Container-->
+        <div class="customers-container">
+            
+        </div>
+    </section>
 
 
     <script src="script.js"></script>
