--- a/index.html
+++ b/index.html
@@ -131,7 +131,46 @@
         </div>
         <!--Container-->
         <div class="customers-container">
-            
+
+            <div class="box">
+                <div class="stars">
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                </div>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores, adipisci. Recusandae consequuntur, harum alias ullam repellat numquam voluptatum possimus minus vel doloremque hic fuga culpa. Veritatis ab tenetur nisi ducimus</p>
+                <h2>Kasun Jayasekara</h2>
+                <img src="img/rev1.jpg" alt="">
+            </div>
+
+            <div class="box">
+                <div class="stars">
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                </div>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores, adipisci. Recusandae consequuntur, harum alias ullam repellat numquam voluptatum possimus minus vel doloremque hic fuga culpa. Veritatis ab tenetur nisi ducimus</p>
+                <h2>Vinuka Jayavihan</h2>
+                <img src="img/rev2.jpg" alt="">
+            </div>
+
+            <div class="box">
+                <div class="stars">
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                </div>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores, adipisci. Recusandae consequuntur, harum alias ullam repellat numquam voluptatum possimus minus vel doloremque hic fuga culpa. Veritatis ab tenetur nisi ducimus</p>
+                <h2>Pawani Hettiarachchi</h2>
+                <img src="img/rev3.jpg" alt="">
+            </div>
+
         </div>
     </section>
 
