--- a/index.html
+++ b/index.html
@@ -174,6 +174,49 @@
         </div>
     </section>
 
+    <!--Footer Section-->
+    <section class="footer">
+        <div class="footer-box">
+            <h3>Coffee Shop</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus mollitia iste aperiam, nisi beatae vitae, tempora ab sint perferendis culpa odio a quaerat distinctio? Iusto omnis praesentium eligendi alias sit.</p>
+        
+            <div class="social">
+                <a href="#"><i class='bx bxl-facebook-circle'></i></a> 
+                <a href="#"><i class='bx bxl-twitter' ></i></a>
+                <a href="#"><i class='bx bxl-instagram' ></i></a>
+                <a href="#"><i class='bx bxl-tiktok' ></i></a> 
+            </div>
+        </div>
+
+        <div class="footer-box">
+            <h3>Support</h3>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Help & Support</a></li>
+            <li><a href="#">Return Policy</a></li>
+            <li><a href="#">Terms of Use</a></li>
+            <li><a href="#">Products</a></li>
+        </div>
+
+        <div class="footer-box">
+            <h3>View Guides</h3>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Blog Post</a></li>
+            <li><a href="#">Our Branches</a></li>
+        </div>
+
+        <div class="footer-box">
+            <h3>Contact</h3>
+            <div class="contact">
+                <span><i class='bx bx-map' ></i>No:67, Kuliyapitiya Road, Udubaddawa</span>
+                <span><i class='bx bxs-phone-call' ></i>+94 76 712-7030</span>
+                <span><i class='bx bx-envelope' ></i>coffee@shop.com</span>
+            </div>
+        </div>
+    </section>
+
+
+
 
     <script src="script.js"></script>
 </body>
