--- a/index.html
+++ b/index.html
@@ -213,10 +213,12 @@
                 <span><i class='bx bx-envelope' ></i>coffee@shop.com</span>
             </div>
         </div>
+
+        <div class="copyright">
+            <p>&copy; 2025 Coffee Shop. All rights reserved. Designed by Kasuni Jayasekara.</p>
+        </div>
+
     </section>
-
-
-
 
     <script src="script.js"></script>
 </body>
